--- a/campsite/index.html
+++ b/campsite/index.html
@@ -22,29 +22,29 @@
               <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav mx-auto">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">HOME</a>
+                        <a class="nav-link active" aria-current="page" href="#home">HOME</a>
                       </li>
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">ABOUT</a>
+                    <a class="nav-link active" aria-current="page" href="#activities-section">ABOUT</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">BLOG</a>
+                    <a class="nav-link" href="#blog">BLOG</a>
                   </li>
                   <a class="navbar-brand d-none d-md-block" href="#">
                     <img src="images/logo.png" alt="">
                   </a>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">SHOP</a>
+                    <a class="nav-link" href="#recent-project">UPDATES</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link">CONTACT US</a>
+                    <a class="nav-link" href="#footer">CONTACT US</a>
                   </li>
                 </ul>
               </div>
             </div>
           </nav>
     
-           <div class="container">
+           <div id="home" class="container">
                 <div class="row">
                     <div class="col hero-text">
                         <p>Balancing life with adventure, friends
@@ -150,7 +150,7 @@
         <!-- latest blog end -->
 
         <!-- footer -->
-        <div class="footer">
+        <div id="footer" class="footer">
             <h1>Join our mailing list</h1>
             <h5>Get notified only when something happens!</h5>
 
