--- a/heraldportfolio/index.html
+++ b/heraldportfolio/index.html
@@ -65,7 +65,7 @@
 
                     </div>
                     <div class="col-md-2">
-                            <button class="resume text"><a href="">Resume</a></button>
+                            <button class="resume text"><a href="files/HeraldCondesRESUME_latest.pdf" target="_blank" download="HeraldCondesRESUME_latest.pdf">Resume</a></button>
                     </div>
                 </div>
 
@@ -104,14 +104,15 @@
 
             <div class="row featured-projects-container container1-color">
                 <div class="col-md-4 project-content-left">
-                    <a href="https://herald-spec.github.io/simplecamp/" target="_blank"><img class="img-fluid" src="images/camp.png"  alt=""></a>
+                    <a href="https://herald-spec.github.io/campsite/" target="_blank"><img class="img-fluid" src="images/camp.png"  alt=""></a>
                 </div>
 
                 <div class="col-md-1"></div>
 
                 <div class="col-md-7 featured-projects-title">
-                    <h4 class="projects-hover">CampSite</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora dolorem porro quae perspiciatis. Ipsa aliquam fuga, ipsam cupiditate nulla distinctio earum ducimus atque modi. Quibusdam recusandae atque alias nobis eos!
+                    <h4 class="projects-hover">Camp Site</h4>
+                    <p>A serene and picturesque camping site, where nature and adventure come together in perfect harmony.
+                        With a soothing color palette and intuitive navigation, you'll easily find information
                     </p>
                     <div class="technology-use  ">
                         <ul>
@@ -124,7 +125,7 @@
                     <div class="row go-to-site-container">
                         <div class="col-md-12">
                             <div class="go-to-site">
-                                <a href="#"><span>Live Site</span></a>
+                                <a href="https://herald-spec.github.io/campsite/" target="_blank"><span>Live Site</span></a>
                             </div>
                         </div>
                     </div>
@@ -224,5 +225,6 @@
                 </div>
             </section>
             <!-- footer end -->
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     </body>
 </html>
