--- a/heraldportfolio/index.html
+++ b/heraldportfolio/index.html
@@ -135,7 +135,7 @@
 
 
 
-            <div class="row featured-projects-container container2-color">
+            <div class="row flex-column-reverse flex-lg-row featured-projects-container container2-color">
                 <div class="col-md-7 featured-projects-title">
                     <h4>CampSite</h4>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut quis autem sint id, debitis quaerat voluptatibus nostrum necessitatibus sit, quibusdam mollitia blanditiis nemo. Quis, nisi. Quos vel animi explicabo saepe?</p>
