--- a/heraldportfolio/index.html
+++ b/heraldportfolio/index.html
@@ -149,13 +149,15 @@
                             <li>HTML</li>
                             <li>CSS</li>
                             <li>Bootstrap</li>
+                            <li>PHP</li>
+                            <li>MSQLI</li>
                         </ul>
                     </div>
     
                     <div class="row go-to-site-container">
                         <div class="col-md-12">
                             <div class="go-to-site">
-                                <a href="https://herald-spec.github.io/campsite/" target="_blank"><span>Live Site</span></a>
+                                <a href="https://kinaiya-ecommerce.000webhostapp.com/kinaiya/index.php" target="_blank"><span>Live Site</span></a>
                             </div>
                         </div>
                     </div>
@@ -164,7 +166,7 @@
                 <div class="col-md-1"></div>
 
                 <div class="col-md-4 project-content-left">
-                    <a href="https://herald-spec.github.io/campsite/" target="_blank"><img class="img-fluid" src="images/camp.png"  alt=""></a>
+                    <a href="https://kinaiya-ecommerce.000webhostapp.com/kinaiya/index.php" target="_blank"><img class="img-fluid" src="images/kinaiya.png"  alt=""></a>
                 </div>
             </div>
 
@@ -172,14 +174,16 @@
 
             <div class="row featured-projects-container container3-color">
                 <div class="col-md-4 project-content-left">
-                    <a href="https://herald-spec.github.io/everlastperfume/" target="_blank"><img class="img-fluid" src="images/camp.png"  alt=""></a>
+                    <a href="https://herald-spec.github.io/campsite/" target="_blank"><img class="img-fluid" src="images/camp.png"  alt=""></a>
                 </div>
 
                 <div class="col-md-1"></div>
 
                 <div class="col-md-7 featured-projects-title">
                     <h4>CampSite</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa, pariatur qui voluptatem atque laborum quos nihil modi corrupti accusamus quia. Repellat sunt provident et? Id illum repellendus quae quisquam et.</p>
+                    <p>A serene and picturesque camping site, where nature and adventure come together in perfect harmony.
+                        With a soothing color palette and intuitive navigation, you'll easily find information
+                    </p>
                     <div class="technology-use  ">
                         <ul>
                             <li>HTML</li>
@@ -191,7 +195,7 @@
                     <div class="row go-to-site-container">
                         <div class="col-md-12">
                             <div class="go-to-site">
-                                <a href="#"><span>Live Site</span></a>
+                                <a href="https://herald-spec.github.io/campsite/" target="_blank"><span>Live Site</span></a>
                             </div>
                         </div>
                     </div>
