--- a/heraldportfolio/index.html
+++ b/heraldportfolio/index.html
@@ -157,7 +157,7 @@
                     <div class="row go-to-site-container">
                         <div class="col-md-12">
                             <div class="go-to-site">
-                                <a href="https://kinaiya-ecommerce.000webhostapp.com/kinaiya/index.php" target="_blank"><span>Live Site</span></a>
+                                <a href="https://kinaiya-ecommerce.000webhostapp.com/index.php" target="_blank"><span>Live Site</span></a>
                             </div>
                         </div>
                     </div>
@@ -166,7 +166,7 @@
                 <div class="col-md-1"></div>
 
                 <div class="col-md-4 project-content-left">
-                    <a href="https://kinaiya-ecommerce.000webhostapp.com/kinaiya/index.php" target="_blank"><img class="img-fluid" src="images/kinaiya.png"  alt=""></a>
+                    <a href="https://kinaiya-ecommerce.000webhostapp.com/index.php" target="_blank"><img class="img-fluid" src="images/kinaiya.png"  alt=""></a>
                 </div>
             </div>
 
