--- a/heraldportfolio/index.html
+++ b/heraldportfolio/index.html
@@ -102,7 +102,6 @@
                 <div class="subheading-line"></div>
             </div>
 
-
             <div class="row featured-projects-container container1-color">
                 <div class="col-md-4 project-content-left">
                     <a href="https://herald-spec.github.io/everlastperfume/" target="_blank"><img class="img-fluid" src="images/everlast-perfume.png"  alt=""></a>
@@ -113,7 +112,7 @@
                 <div class="col-md-7 featured-projects-title">
                     <h4 class="projects-hover">Everlast Perfume</h4>
                     <p> Immerse yourself in a curated collection of exquisite 
-                        fragrances from renowned brands and artisanal perfumers. Explore our captivating scents, read expert reviews, and find your 
+                        fragrances from renowned brands and artisanal perfumers. Explore our captivating scents, and find your 
                         signature fragrance.
                     </p>
                     <div class="technology-use  ">
@@ -140,9 +139,8 @@
 
             <div class="row flex-column-reverse flex-lg-row featured-projects-container container2-color">
                 <div class="col-md-7 featured-projects-title">
-                    <h4 class="projects-hover">Camp Site</h4>
-                    <p>A serene and picturesque camping site, where nature and adventure come together in perfect harmony.
-                        With a soothing color palette and intuitive navigation, you'll easily find information
+                    <h4 class="projects-hover">Kinaiya</h4>
+                    <p>An ecommerce website to help market the Ituman-maghatan Bukignon hand-crafted crafts.
                     </p>
                     <div class="technology-use  ">
                         <ul>
