--- a/heraldportfolio/index.html
+++ b/heraldportfolio/index.html
@@ -111,10 +111,7 @@
 
                 <div class="col-md-7 featured-projects-title">
                     <h4 class="projects-hover">Everlast Perfume</h4>
-                    <p> Immerse yourself in a curated collection of exquisite 
-                        fragrances from renowned brands and artisanal perfumers. Explore our captivating scents, and find your 
-                        signature fragrance.
-                    </p>
+                    <p>Immerse yourself in a curated collection of exquisite fragrances from renowned brands and artisanal perfumers.</p>
                     <div class="technology-use  ">
                         <ul>
                             <li>HTML</li>
@@ -140,8 +137,7 @@
             <div class="row flex-column-reverse flex-lg-row featured-projects-container container2-color">
                 <div class="col-md-7 featured-projects-title">
                     <h4 class="projects-hover">Kinaiya</h4>
-                    <p>An ecommerce website to help market the Ituman-maghatan Bukignon hand-crafted crafts.
-                    </p>
+                    <p>An ecommerce website to help the Ituman Maghatan Bukignon market their beautiful Handmade crafts.</p>
                     <div class="technology-use  ">
                         <ul>
                             <li>HTML</li>
@@ -179,9 +175,7 @@
 
                 <div class="col-md-7 featured-projects-title">
                     <h4>CampSite</h4>
-                    <p>A serene and picturesque camping site, where nature and adventure come together in perfect harmony.
-                        With a soothing color palette and intuitive navigation, you'll easily find information
-                    </p>
+                    <p>A serene and picturesque camping site, where nature and adventure come together in perfect harmony.</p>
                     <div class="technology-use  ">
                         <ul>
                             <li>HTML</li>
